Fixed programming section on mobile.

--- a/css/portfolio_format.css
+++ b/css/portfolio_format.css
@@ -236,6 +236,10 @@ video {
 		margin-left: 0px;
 	}
 
+	.left2{
+		margin-left: 0px;
+	}
+
 	.hide{
 		margin-left: 0px;
 	}
